src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Deposit_Amount_4__c</fullName>
        <label>Deposit Amount #4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Date_2__c</fullName>
        <label>Deposit Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Date_3__c</fullName>
        <label>Deposit Date #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Date_4__c</fullName>
        <label>Deposit Date #4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Destination_Club__c</fullName>
        <label>Destination Club</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;K Residence Club</fullName>
                </value>
                <value>
                    <fullName>Discovery Land Company</fullName>
                </value>
                <value>
                    <fullName>Exclusive Resorts</fullName>
                </value>
                <value>
                    <fullName>Four Season Residences</fullName>
                </value>
                <value>
                    <fullName>Inspirato</fullName>
                </value>
                <value>
                    <fullName>Quintess</fullName>
                </value>
                <value>
                    <fullName>ResidenSea</fullName>
                </value>
                <value>
                    <fullName>Ritz Carlton Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Emergency Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Emergency Contact)</relationshipLabel>
        <relationshipName>Contacts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <label>Events</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academy Awards</fullName>
                </value>
                <value>
                    <fullName>Allen &amp; Co (Sun Valley)</fullName>
                </value>
                <value>
                    <fullName>Art Basel</fullName>
                </value>
                <value>
                    <fullName>BRK Meeting</fullName>
                </value>
                <value>
                    <fullName>Cannes Film Festival</fullName>
                </value>
                <value>
                    <fullName>Final Four</fullName>
                </value>
                <value>
                    <fullName>Golden Globes</fullName>
                </value>
                <value>
                    <fullName>Grammys</fullName>
                </value>
                <value>
                    <fullName>MLB Playoffs-Away Game</fullName>
                </value>
                <value>
                    <fullName>NBA Game-Away Game</fullName>
                </value>
                <value>
                    <fullName>NCAA BCS Games</fullName>
                </value>
                <value>
                    <fullName>NFL Playoffs-Away Game</fullName>
                </value>
                <value>
                    <fullName>Super Bowl</fullName>
                </value>
                <value>
                    <fullName>Upfronts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Hierarchy__c</fullName>
        <label>Executive Hierarchy</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_2__c</fullName>
        <label>Expiration Date #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_3__c</fullName>
        <label>Expiration Date #3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_4__c</fullName>
        <label>Expiration Date #4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Days_Until_Next_Birthday__c</fullName>
        <formula>FSTR__Next_Birthday__c-Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Next Birthday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Next_Birthday__c</fullName>
        <formula>IF(OR(Month( Birthdate )&gt;Month(Today()), AND(Month( Birthdate )=Month(Today()), Day(Birthdate)&gt;=Day(Today()))), IF(AND(MONTH(Birthdate) = 2, DAY(Birthdate) = 29),(IF(OR(MOD(YEAR(Today()), 400) = 0, AND(MOD(YEAR(Today()),4) = 0, MOD(YEAR(Today()), 100) &lt;&gt; 0)),
DATE(YEAR(Today()), MONTH(Birthdate), DAY(Birthdate)),
DATE(YEAR(Today()), MONTH(Birthdate), 28))),
(DATE(YEAR(Today()), MONTH(Birthdate) , DAY(Birthdate)))),
IF(AND(MONTH(Birthdate) = 2, DAY(Birthdate) = 29),
(IF(OR(MOD(YEAR(Today()) +1, 400) = 0, AND(MOD(YEAR(Today()) + 1 ,4) = 0, MOD(YEAR(Today()) + 1, 100) &lt;&gt; 0)),
DATE(YEAR(Today()) + 1, MONTH(Birthdate), DAY(Birthdate)),
DATE(YEAR(Today()) +1, MONTH(Birthdate), 28))),
(DATE(YEAR(Today()) +1, MONTH(Birthdate) , DAY(Birthdate)))))</formula>
        <inlineHelpText>Indicates the actual date of the next occurrence of the contacts birthday.</inlineHelpText>
        <label>Next Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Favorite_Car_1__c</fullName>
        <label>Favorite Cars</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>Bentley</fullName>
                </value>
                <value>
                    <fullName>Ferrari</fullName>
                </value>
                <value>
                    <fullName>Lamborghini</fullName>
                </value>
                <value>
                    <fullName>McLaren</fullName>
                </value>
                <value>
                    <fullName>Porsche</fullName>
                </value>
                <value>
                    <fullName>Rolls-Royce</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_College_Basketball_Team__c</fullName>
        <label>Favorite College Basketball Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Akron</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arizona State</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Auburn</fullName>
                </value>
                <value>
                    <fullName>Ball State</fullName>
                </value>
                <value>
                    <fullName>Baylor</fullName>
                </value>
                <value>
                    <fullName>Boise State</fullName>
                </value>
                <value>
                    <fullName>Boston College</fullName>
                </value>
                <value>
                    <fullName>Boston University</fullName>
                </value>
                <value>
                    <fullName>Bowling Green</fullName>
                </value>
                <value>
                    <fullName>Brigham Young</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Bucknell</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Cal State-Northridge</fullName>
                </value>
                <value>
                    <fullName>Central Michigan</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Claremont McKenna</fullName>
                </value>
                <value>
                    <fullName>Clemson</fullName>
                </value>
                <value>
                    <fullName>Colgate</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Colorado State</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_College_Football_Team__c</fullName>
        <label>Favorite College Football Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Akron</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arizona State</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Auburn</fullName>
                </value>
                <value>
                    <fullName>Ball State</fullName>
                </value>
                <value>
                    <fullName>Baylor</fullName>
                </value>
                <value>
                    <fullName>Boise State</fullName>
                </value>
                <value>
                    <fullName>Boston College</fullName>
                </value>
                <value>
                    <fullName>Boston University</fullName>
                </value>
                <value>
                    <fullName>Bowling Green</fullName>
                </value>
                <value>
                    <fullName>Brigham Young</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Bucknell</fullName>
                </value>
                <value>
                    <fullName>Buffalo</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Cal State-Northridge</fullName>
                </value>
                <value>
                    <fullName>Central Michigan</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Claremont McKenna</fullName>
                </value>
                <value>
                    <fullName>Clemson</fullName>
                </value>
                <value>
                    <fullName>Colgate</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Colorado State</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_MLB_Team__c</fullName>
        <label>Favorite MLB Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arizona Diamondbacks</fullName>
                </value>
                <value>
                    <fullName>Atlanta Braves</fullName>
                </value>
                <value>
                    <fullName>Baltimore Orioles</fullName>
                </value>
                <value>
                    <fullName>Boston Red Sox</fullName>
                </value>
                <value>
                    <fullName>Chicago Cubs</fullName>
                </value>
                <value>
                    <fullName>Chicago White Sox</fullName>
                </value>
                <value>
                    <fullName>Cincinnati Reds</fullName>
                </value>
                <value>
                    <fullName>Cleveland Indians</fullName>
                </value>
                <value>
                    <fullName>Colorado Rockies</fullName>
                </value>
                <value>
                    <fullName>Detroit Tigers</fullName>
                </value>
                <value>
                    <fullName>Miami Marlins</fullName>
                </value>
                <value>
                    <fullName>Houston Astros</fullName>
                </value>
                <value>
                    <fullName>Kansas City Royals</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Angels</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Dodgers</fullName>
                </value>
                <value>
                    <fullName>Milwaukee Brewers</fullName>
                </value>
                <value>
                    <fullName>Minnesota Twins</fullName>
                </value>
                <value>
                    <fullName>New York Mets</fullName>
                </value>
                <value>
                    <fullName>New York Yankees</fullName>
                </value>
                <value>
                    <fullName>Oakland Athletics</fullName>
                </value>
                <value>
                    <fullName>Philadelphia Phillies</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh Pirates</fullName>
                </value>
                <value>
                    <fullName>San Diego Padres</fullName>
                </value>
                <value>
                    <fullName>San Francisco Giants</fullName>
                </value>
                <value>
                    <fullName>Seattle Mariners</fullName>
                </value>
                <value>
                    <fullName>St. Louis Cardinals</fullName>
                </value>
                <value>
                    <fullName>Tampa Bay Rays</fullName>
                </value>
                <value>
                    <fullName>Texas Rangers</fullName>
                </value>
                <value>
                    <fullName>Toronto Blue Jays</fullName>
                </value>
                <value>
                    <fullName>Washington Nationals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_NBA_Team__c</fullName>
        <label>Favorite NBA Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta Hawks</fullName>
                </value>
                <value>
                    <fullName>Boston Celtics</fullName>
                </value>
                <value>
                    <fullName>Charlotte Bobcats</fullName>
                </value>
                <value>
                    <fullName>Chicago Bulls</fullName>
                </value>
                <value>
                    <fullName>Cleveland Cavaliers</fullName>
                </value>
                <value>
                    <fullName>Dallas Mavericks</fullName>
                </value>
                <value>
                    <fullName>Denver Nuggets</fullName>
                </value>
                <value>
                    <fullName>Detroit Pistons</fullName>
                </value>
                <value>
                    <fullName>Golden State Warriors</fullName>
                </value>
                <value>
                    <fullName>Houston Rockets</fullName>
                </value>
                <value>
                    <fullName>Indiana Pacers</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Clippers</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Lakers</fullName>
                </value>
                <value>
                    <fullName>Memphis Grizzlies</fullName>
                </value>
                <value>
                    <fullName>Miami Heat</fullName>
                </value>
                <value>
                    <fullName>Milwaukee Bucks</fullName>
                </value>
                <value>
                    <fullName>Minnesota Timberwolves</fullName>
                </value>
                <value>
                    <fullName>New Jersey Nets</fullName>
                </value>
                <value>
                    <fullName>New Orleans Hornets</fullName>
                </value>
                <value>
                    <fullName>New York Knicks</fullName>
                </value>
                <value>
                    <fullName>Oklahoma City Thunder</fullName>
                </value>
                <value>
                    <fullName>Orlando Magic</fullName>
                </value>
                <value>
                    <fullName>Philadelphia Sixers</fullName>
                </value>
                <value>
                    <fullName>Phoenix Suns</fullName>
                </value>
                <value>
                    <fullName>Portland Trail Blazers</fullName>
                </value>
                <value>
                    <fullName>Sacramento Kings</fullName>
                </value>
                <value>
                    <fullName>San Antonio Spurs</fullName>
                </value>
                <value>
                    <fullName>Toronto Raptors</fullName>
                </value>
                <value>
                    <fullName>Utah Jazz</fullName>
                </value>
                <value>
                    <fullName>Washington Wizards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_NFL_Team__c</fullName>
        <label>Favorite NFL Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arizona Cardinals</fullName>
                </value>
                <value>
                    <fullName>Atlanta Falcons</fullName>
                </value>
                <value>
                    <fullName>Baltimore Ravens</fullName>
                </value>
                <value>
                    <fullName>Buffalo Bills</fullName>
                </value>
                <value>
                    <fullName>Carolina Panthers</fullName>
                </value>
                <value>
                    <fullName>Chicago Bears</fullName>
                </value>
                <value>
                    <fullName>Cincinnati Bengals</fullName>
                </value>
                <value>
                    <fullName>Cleveland Browns</fullName>
                </value>
                <value>
                    <fullName>Dallas Cowboys</fullName>
                </value>
                <value>
                    <fullName>Denver Broncos</fullName>
                </value>
                <value>
                    <fullName>Detroit Lions</fullName>
                </value>
                <value>
                    <fullName>Green Bay Packers</fullName>
                </value>
                <value>
                    <fullName>Houston Texans</fullName>
                </value>
                <value>
                    <fullName>Indianapolis Colts</fullName>
                </value>
                <value>
                    <fullName>Jacksonville Jaguars</fullName>
                </value>
                <value>
                    <fullName>Kansas City Chiefs</fullName>
                </value>
                <value>
                    <fullName>Miami Dolphins</fullName>
                </value>
                <value>
                    <fullName>Minnesota Vickings</fullName>
                </value>
                <value>
                    <fullName>New England Patriots</fullName>
                </value>
                <value>
                    <fullName>New Orleans Saints</fullName>
                </value>
                <value>
                    <fullName>New York Giants</fullName>
                </value>
                <value>
                    <fullName>New York Jets</fullName>
                </value>
                <value>
                    <fullName>Oakland Raiders</fullName>
                </value>
                <value>
                    <fullName>Philadelphia Eagles</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh Steelers</fullName>
                </value>
                <value>
                    <fullName>San Diego Chargers</fullName>
                </value>
                <value>
                    <fullName>San Francisco 49ers</fullName>
                </value>
                <value>
                    <fullName>Seattle Seahawks</fullName>
                </value>
                <value>
                    <fullName>St. Louis Rams</fullName>
                </value>
                <value>
                    <fullName>Tampa Bay Buccaneers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_NHL_Team__c</fullName>
        <label>Favorite NHL Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anaheim Ducks</fullName>
                </value>
                <value>
                    <fullName>Boston Bruins</fullName>
                </value>
                <value>
                    <fullName>Buffalo Sabres</fullName>
                </value>
                <value>
                    <fullName>Calgary Flames</fullName>
                </value>
                <value>
                    <fullName>Carolina Hurricanes</fullName>
                </value>
                <value>
                    <fullName>Chicago Blackhawks</fullName>
                </value>
                <value>
                    <fullName>Colorado Avalanche</fullName>
                </value>
                <value>
                    <fullName>Columbus Blue Jackets</fullName>
                </value>
                <value>
                    <fullName>Dallas Stars</fullName>
                </value>
                <value>
                    <fullName>Detroit Red Wings</fullName>
                </value>
                <value>
                    <fullName>Edmonton Oilers</fullName>
                </value>
                <value>
                    <fullName>Florida Panthers</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Kings</fullName>
                </value>
                <value>
                    <fullName>Minnesota Wild</fullName>
                </value>
                <value>
                    <fullName>Montreal Canadiens</fullName>
                </value>
                <value>
                    <fullName>Nashville Predators</fullName>
                </value>
                <value>
                    <fullName>New Jersey Devils</fullName>
                </value>
                <value>
                    <fullName>New York Islanders</fullName>
                </value>
                <value>
                    <fullName>New York Rangers</fullName>
                </value>
                <value>
                    <fullName>Ottawa Senators</fullName>
                </value>
                <value>
                    <fullName>Philadelphia Flyers</fullName>
                </value>
                <value>
                    <fullName>Phoenix Coyotes</fullName>
                </value>
                <value>
                    <fullName>Pittsburgh Penguins</fullName>
                </value>
                <value>
                    <fullName>San Jose Sharks</fullName>
                </value>
                <value>
                    <fullName>St Louis Blues</fullName>
                </value>
                <value>
                    <fullName>Tampa Bay Lightning</fullName>
                </value>
                <value>
                    <fullName>Toronto Maple Leafs</fullName>
                </value>
                <value>
                    <fullName>Vancouver Canucks</fullName>
                </value>
                <value>
                    <fullName>Washington Capitals</fullName>
                </value>
                <value>
                    <fullName>Winnipeg Jets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send follow up email to prospects two weeks after initial email</description>
        <inlineHelpText>Send follow up email to prospects two weeks after initial email</inlineHelpText>
        <label>Follow Up Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Former_Aviation_Provider__c</fullName>
        <label>Former Aviation Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACM</fullName>
                </value>
                <value>
                    <fullName>Advanced Air LLC</fullName>
                </value>
                <value>
                    <fullName>Aircraft Services Group</fullName>
                </value>
                <value>
                    <fullName>Air Royale</fullName>
                </value>
                <value>
                    <fullName>Apollo Jets</fullName>
                </value>
                <value>
                    <fullName>AvantAir</fullName>
                </value>
                <value>
                    <fullName>Aviation Consultants</fullName>
                </value>
                <value>
                    <fullName>AvJet</fullName>
                </value>
                <value>
                    <fullName>Blade Bounce/Anywhere</fullName>
                </value>
                <value>
                    <fullName>BLADEone</fullName>
                </value>
                <value>
                    <fullName>Blue Star Jets</fullName>
                </value>
                <value>
                    <fullName>Chyrsler Aviation</fullName>
                </value>
                <value>
                    <fullName>Cinco Air Charter</fullName>
                </value>
                <value>
                    <fullName>CitationAir</fullName>
                </value>
                <value>
                    <fullName>Clay Lacy</fullName>
                </value>
                <value>
                    <fullName>Cobalt</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets</fullName>
                </value>
                <value>
                    <fullName>Dreamline Aviation</fullName>
                </value>
                <value>
                    <fullName>Dumont Aviation</fullName>
                </value>
                <value>
                    <fullName>EJM</fullName>
                </value>
                <value>
                    <fullName>Elite Aviation</fullName>
                </value>
                <value>
                    <fullName>Execaire</fullName>
                </value>
                <value>
                    <fullName>FlexJet</fullName>
                </value>
                <value>
                    <fullName>Flight Options</fullName>
                </value>
                <value>
                    <fullName>Friend&apos;s Jet</fullName>
                </value>
                <value>
                    <fullName>Glencoe Aviation</fullName>
                </value>
                <value>
                    <fullName>Jet Aviation</fullName>
                </value>
                <value>
                    <fullName>JetEdge Internation</fullName>
                </value>
                <value>
                    <fullName>JetFlite International</fullName>
                </value>
                <value>
                    <fullName>Jet Methods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Former_Program_s_Notes__c</fullName>
        <label>Former Program(s) Notes</label>
        <length>55000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>